[package]
name = "meteo"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.51"
clap = { version = "3.0.0-rc.0", features = ["derive"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
percent-encoding = "2.1.0"
reqwest = { version = "0.11.7", features = ["blocking"] }
select = "0.5.0"
open = "2.0.2"

[features]
